--- a/css/site.css
+++ b/css/site.css
@@ -9,193 +9,160 @@ body {
   font-family: "Manrope", sans-serif;
   background-color: #f1f1f1;
 }
-.top-bar {
-  background-color: #3b5998;
-  color: white;
-  padding: 5px 20px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.top-bar a {
-  color: white;
-  text-decoration: none;
-  margin-left: 15px;
-}
 
-.nav-bar {
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navbar-nav .nav-item .nav-link {
+  color: #fff !important;
 }
-.logo {
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-}
-.logo img {
-  width: 200px;
-  margin-right: 10px;
-}
-.nav-menu {
-  display: flex;
-  list-style-type: none;
-  margin-bottom: 0px;
-}
-.nav-menu li {
-  margin-left: 20px;
-}
-.nav-menu a {
-  color: white;
-  text-decoration: none;
-  font-size: 14px;
-  padding: 25px 0px;
-  font-family: manrope;
-  font-weight: 800;
-}
-.login-btn {
-  background-color: transparent;
-  border: none;
-  color: white;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-.login-btn img {
-  margin-top: -5px;
-}
-.menu-icon {
-  display: none;
-  color: white;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.dropdown-menu li a {
-  color: #000;
-  display: block;
-  padding: 0;
-  width: 100%;
-}
-.dropdown:hover .dropdown-menu {
-  display: block;
-  background: #fff;
-  border: none;
-  box-shadow: 1px 2px 5px #000;
-  border-radius: 0px;
-  margin-top: 20px;
-}
-
-.hero-banner {
-  background-image: url(../image/Herohhh.jpg);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  min-height: 700px;
-  background-attachment: scroll;
-  margin: 0;
-  padding: 0;
-}
-/* hero-banner start  */
-.hero-banner h2 {
-  font-family: manrope;
-  font-weight: 300;
-  font-size: 65px;
-  line-height: 75px;
-  text-align: center;
-  margin-top: 360px;
+.navbar-nav .nav-item .nav-link:hover {
   color: #fff;
 }
 
-/* hero banner close  */
-
-/* who we are start  */
-.who-we-are {
-  padding: 80px 0px 80px 120px;
+.secondary-nav {
+  background: #28448c;
 }
-.who-we-are h2 {
-  font-weight: 700;
+.secondary-nav li.nav-item:not(:last-child) {
+  margin: 0px 15px !important;
+}
+.secondary-nav li a {
+  color: #fff;
   font-family: manrope;
-  font-size: 18px;
-  line-height: 28px;
-  color: #28448c;
-  margin: 0;
-  padding-bottom: 20px;
+  font-family: 600;
+  font-size: 13px;
+  line-height: 23px;
 }
-.who-we-are p {
-  font-size: 45px;
-  line-height: 55px;
-  font-weight: 300;
-}
-.who-we-are .image-container {
+/* Seconday End  */
+#primary-menu {
+  background-image: url("/image/Herohhh.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
   position: relative;
 }
 
-/* who we are end  */
-@media (max-width: 991px) {
-  .who-we-are {
-    padding: 80px 0px 0px 0px;
-    margin: 0;
+#primary-menu h1 {
+  font-size: 65px;
+  font-weight: 300;
+  line-height: 84.5px;
+  text-align: center;
+  color: #fff;
+  margin-top: 350px;
+}
+#primary-menu h2 {
+  text-align: center;
+}
+.dropdown-menu {
+  display: none;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+.navbar-nav .dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.navbar .navbar-nav li a {
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19.12px;
+  text-align: center;
+}
+/* Navbar End  */
+
+/* Banner End  */
+
+#who-we-are {
+  padding-top: 100px;
+}
+#who-we-are h2 {
+  /* Who we are */
+
+  width: 1060px;
+  height: 26px;
+
+  /* Large Caps */
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 146.5%;
+  /* or 26px */
+  text-align: center;
+  letter-spacing: 0.055em;
+  text-transform: uppercase;
+
+  color: #28448c;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+#who-we-are p {
+  width: 1060px;
+  height: 171px;
+
+  /* H2/Light */
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 45px;
+  line-height: 127.5%;
+  /* or 57px */
+  text-align: center;
+
+  color: #221e1f;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+/* Who We Are End  */
+
+@media (max-width: 1024px) {
+  #primary-menu h1 {
+    margin-top: 250px;
   }
 }
-@media (max-width: 1024px) {
-  .top-bar {
-    display: none;
-  }
-  .nav-menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    background-color: #000;
-  }
+@media (max-width: 768px) {
   .dropdown-menu {
-    position: relative;
+    background: transparent;
   }
+}
 
-  .dropdown:hover .dropdown-menu {
-    width: 100%;
-    margin: 0;
-    padding: 1px;
+@media (min-width: 768px) and (max-width: 820px) {
+  #primary-menu {
+    height: 100%;
+    background-size: cover;
   }
-  .nav-menu.active {
-    display: flex;
-  }
-  .nav-menu li {
-    margin: 10px 20px;
-  }
-  .menu-icon {
-    display: block;
-  }
-
-  /* Hero banner Start  */
-  .hero-banner h2 {
+  #primary-menu h1 {
     font-size: 50px;
     line-height: 60px;
+    margin-top: 200px;
   }
-
-  /* Hero banner End  */
 }
-
 @media (max-width: 767px) {
-  .hero-banner h2 {
-    font-size: 55px;
-    line-height: 65px;
+  #primary-menu {
+    height: 100%;
+    background-size: cover;
+  }
+  .dropdown-menu {
+    background: transparent;
+  }
+  .dropdown-menu .dropdown-item {
+    background: transparent;
   }
 }
 
-@media (max-width: 420px) {
-  .hero-banner h2 {
-    font-size: 27px;
-    line-height: 37px;
-  }
-  .who-we-are p {
-    font-size: 27px;
-    line-height: 37px;
+@media (max-width: 414px) {
+  #primary-menu h1 {
+    font-size: 29px;
+    line-height: 39px;
+    margin-top: 150px;
   }
 }
